depot ids are specific now

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,6 @@
 # These are supported funding model platforms
 
-github: game-ci
+github: bbsify-landed
 patreon: # Replace with a single Patreon username
 open_collective: # replace with a single OpenCollective username
 ko_fi: # Replace with a single Ko-fi username
